get rid of using a 'private' version of Sun's Base64 encode/decode
-jon


git-svn-id: https://svn.apache.org/repos/asf/webservices/xmlrpc/trunk@233703 13f79535-47bb-0310-9956-ffa450edef68